# tprr

./: .gitignore  CLAUDE.md  README.md  project_plan.md  prompts.md  pyproject.toml
.claude/: settings.json
config/: contributors.yaml  index_config.yaml  model_registry.yaml  scenarios.yaml  tier_b_revenue.yaml
docs/: decision_log.md  tprr_development.md  tprr_methodology.md  tprr_white_paper.md
docs/findings/: README.md  (+12 more)
notebooks/: 02a_explore_baseline.ipynb
scripts/: analyze_claim2_cross_config.py  analyze_gate_x_scenarios.py  coefficient_sweep.py  compute_indices.py  development_doc_charts.py  fetch_openrouter.py  gate_sweep.py  gate_x_scenarios_x_seeds_sweep.py  generate_mock_data.py  haircut_sweep.py  lambda_sweep.py  multi_seed_sweep.py  plot_indices.py  reinstatement_sweep.py  suspension_sweep.py  twap_ordering_sweep.py
tests/: test_aggregation.py  test_change_events.py  test_compute.py  test_config.py  test_derived.py  test_fetch_openrouter.py  test_generate_mock_data.py  test_mockdata_contributors.py  test_mockdata_pricing.py  test_mockdata_volume.py  test_openrouter_client.py  test_openrouter_match_rate.py  test_openrouter_normalise.py  test_outliers.py  test_phase7_scenarios.py  test_quality.py  test_scenarios.py  test_schema.py  test_sensitivity_gate_x_scenarios.py  test_sensitivity_manifest.py  test_sensitivity_multi_seed.py  test_sensitivity_pipeline_rerun.py  test_sensitivity_recompute.py  test_sensitivity_sweep.py  test_tier_b.py  test_tier_eligibility_threshold.py  test_twap_reconstruct.py  test_viz_charts.py  test_viz_dashboard.py  test_weights.py
(+30 files in other folders)
