[project]
name = "tprr"
version = "0.1.0"
description = "Noble Argon TPRR Index — methodology validation MVP"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.40",
    "httpx>=0.27.0",
    "plotly>=5.24.0",
    "pyarrow>=17.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "pandas-stubs>=2.2.0",
    "types-pyyaml>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM"]
"notebooks/*" = ["E", "F"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tprr"]
